Use static storage duration for the cached color scheme config

Using thread storage duration causes a crash on Windows when Kleopatra
is quit.

Suggested-by: Andre Heinecke <aheinecke@gnupg.org>
GnuPG-bug-id: 5962